# asset-register-bin-experiments

./: .gitignore  Cargo.toml  README.md  trace.json
src/: asset_registry.rs  asset_registry_export_path.rs  asset_registry_header.rs  asset_registry_version.rs  logging.rs  main.rs  names_batch.rs  read.rs  serialized_name_header.rs  store_data.rs  top_level_asset_path.rs  unreal_types.rs  write.rs
src/assets/: asset_bundle_entry.rs  asset_data.rs  asset_data_collection.rs  mod.rs  soft_object_path.rs
src/unreal_types/: fasset_registry_export_path.rs  fname.rs  fnumbered_pair.rs  fstring.rs  ftext.rs  mod.rs
