[package]
name = "asset-register-bin-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "env-filter",
  "std",
  "registry",
] }
fs-err = "2.11.0"
byteorder = "1.5.0"
num_enum = "0.7.2"
itertools = "0.12.1"

ser-hex = { git = "https://github.com/trumank/ser-hex.git", version = "0.1.0" }
uasset_utils = { git = "https://github.com/trumank/uasset_utils.git" }

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace"], default-features = false }

[profile.dev.package.backtrace]
opt-level = 3
